<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TimeTable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>
    <string name="timetable">TimeTable</string>
    <string name="ulan_nurymov_gmail_com">ulan.nurymov@gmail.com</string>
    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">School website</string>
    <string name="school_website_snackbar">Please, set URL of your school website in settings.</string>
    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>
    <string name="title_activity_homeworks">HomeworksActivity</string>
    <string name="homeworks">Homeworks</string>
    <string name="select_date">Select date</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_dialog">Description:</string>
    <string name="desctiption">Desctiption</string>
    <string name="date_error">Date field can not be empty!</string>
    <string name="edit_homework">Edit homework</string>
    <string name="add_homework">Add homework</string>
    <string name="deadline_snackbar">"Deadline field can not be empty!</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field can not be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>
    <string name="teachers">Teachers</string>
    <string name="add_teacher">Add teacher</string>
    <string name="edit_teacher">Edit teacher</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>
    <string name="exams">Exams</string>
    <string name="add_exam">Add exam</string>
    <string name="date_dialog">Date:</string>
    <string name="time_dialog">Time:</string>
    <string name="sevendays_setting">Enable 7 Days of the Week</string>
    <string name="school_website_setting">Change school website</string>
    <string name="school_website_setting_summary">Change URL of your school website</string>
    <string name="notification_title">Today\'s lessons</string>
    <string name="do_not_have_lessons">You do not have lessons!</string>
    <string name="subtitle">Official app © Felix Hollederer</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_website">Homepage</string>
    <string name="menu_mebis">Mebis</string>
    <string name="menu_mensa">Cafeteria (kitafino)</string>
    <string name="menu_category_other">More</string>
    <string name="menu_category_school">High school</string>
    <string name="menu_at_one_glance">At a glance!</string>
    <string name="menu_impressum">About</string>
    <string name="menu_update">Updates</string>
    <string name="changelog">Changelog</string>
    <string name="menu_shop">Online shop</string>
    <string name="menu_teacher_list">List of teachers</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_grades">Grade management (Excel)</string>
    <string name="menu_days">Single days</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="set_substitution_title">Substitution plan</string>
    <string name="set_courses_title">Courses/Classes</string>
    <string name="set_desc_courses">Divide individual courses with a # between them, e.g. 1ph3#1d4#1bio2</string>
    <string name="set_substitution_signin">Credentials</string>
    <string name="set_substitution_username">User name:</string>
    <string name="set_substitution_password">Password:</string>
    <string name="set_notification_title">Notification</string>
    <string name="set_notification_isOn">Show notification</string>
    <string name="set_notification_showAlways">Show permanently</string>
    <string name="set_hours">Show times instead of hours</string>
    <string name="set_show_borders">Outline the teachers</string>
    <string name="set_show_borders_specific">Filtered plan only</string>
    <string name="set_miscellaneous_title">Others</string>
    <string name="set_beta_features">Beta Features</string>
    <string name="set_old_substitution">Old design</string>
    <string name="nothing">No sit-ins for you</string>
    <string name="back_button">Press again to exit</string>
    <string name="downloading">Loading\u2026</string>
    <string name="footprint">Generated with the GymWenApp: https://asdoi.gitlab.io/</string>
    <string name="noInternet">You are not connected to the internet!</string>
    <string name="noInternetConnection">No Internet connection!</string>
    <string name="share_substitution_plan">Send representation to\u2026</string>
    <string name="day_past">(Past)</string>
    <string name="classes">Grade</string>
    <string name="courses">Course</string>
    <string name="hours">Hour</string>
    <string name="hours_short">H</string>
    <string name="hours_short_three">Hour</string>
    <string name="teacher_short">T</string>
    <string name="room_short">R</string>
    <string name="miscellaneous">Others</string>
    <string name="miscellaneous_short">Others</string>
    <string name="title_activity_sign_in">Registration</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_success">Login Successful</string>
    <string name="login_sign_in">Sign in</string>
    <string name="please_wait">Please wait</string>
    <string name="proofing">Registration data will be checked</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_description">Please enter the registration data for the online representation plan here.</string>
    <string name="title_activity_choice">Courses/class choice</string>
    <string name="choice_senior">Advanced level (Q11/Q12)</string>
    <string name="choice_5">5th grade</string>
    <string name="choice_6">6th grade</string>
    <string name="choice_7">7th grade</string>
    <string name="choice_8">8th grade</string>
    <string name="choice_9">9th grade</string>
    <string name="choice_10">10th grade</string>
    <string name="choice_parents">Parents</string>
    <string name="choice_more_classes">Another class</string>
    <string name="choice_more_letters">Another letter</string>
    <string name="choice_senior_one">Year 1 (11th grade, at 1d4 the 1)</string>
    <string name="choice_senior_two">Year 2 (12th grade, at 2d4 the 2)</string>
    <string name="choice_more_cours_digits">Another vintage</string>
    <string name="choice_title_4">Course of compulsory subjects (German, math, history, social studies)\n(e.g. at 1d4, the 4)</string>
    <string name="choice_main_courses">Course of compulsory subjects</string>
    <string name="choice_complete">Please complete your course choice:</string>
    <string name="choice_add_course">Add another course</string>
    <string name="senior_empty">Please insert courses</string>
    <string name="additional_course">Additional course</string>
    <string name="please_insert_digit">Please enter a number</string>
    <string name="please_insert_letter">Please enter a letter</string>
    <string name="math">Maths</string>
    <string name="german">German</string>
    <string name="history">History</string>
    <string name="social_education">Social Studies</string>
    <string name="PE">Sports</string>
    <string name="Religious_education">Religion</string>
    <string name="english">English</string>
    <string name="france">French</string>
    <string name="latin">Latin</string>
    <string name="spanish">Spanish</string>
    <string name="biology">Biology</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="programming">Computer science</string>
    <string name="geography">Geography</string>
    <string name="finance">Economic and legal</string>
    <string name="art">Art</string>
    <string name="music">Music</string>
    <string name="W_Seminar">W Seminar</string>
    <string name="P_Seminar">P-Seminar</string>
    <string name="profile_subject">Profile-subject</string>
    <string name="impressum_AboutLibs_Title">Open source libraries</string>
    <string name="set_notification_alarm">On fixed time</string>
    <string name="set_choose_theme">Choose theme</string>
    <string name="menu_backup">Backup</string>
    <string name="set_desc_alwaysNotification">The notification can only be hidden manually</string>
    <string name="set_desc_alarm">Show the notification at a specific time</string>
    <string name="description">Desctiption</string>
    <string name="do_not_disturb_setting">Automatic Do not disturb</string>
    <string name="do_not_disturb_settings_desc">Automatically switch to do not disturb mode during subjects and then switch it off again</string>
    <string name="do_not_disturb_turn_off">Also turning off</string>
    <string name="menu_restore">Restore</string>
    <string name="remove_all_subjects">Delete everything</string>
</resources>