<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="100"
        android:title="@string/menu_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove_all"
        android:orderInCategory="100"
        android:title="@string/remove_all_subjects"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_libs"
        android:orderInCategory="100"
        android:title="@string/about_libs_title"
        app:showAsAction="never" />
</menu>
