<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/weeksettings"
        android:title="@string/seven_days_of_the_week"
        android:icon="@drawable/baseline_settings_black_18"
        app:actionLayout="@layout/layout_switch"
        />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/week"
            android:icon="@drawable/baseline_view_week_black_18"
            android:title="@string/week" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homework"
            android:icon="@drawable/baseline_book_black_18"
            android:title="@string/homeworks" />
    </group>

</menu>
