<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">


    <TextView
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/subject"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/subject"
        android:layout_weight="66.6"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3">

        <TextView
            android:gravity="center"
            android:text="@string/time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/time"/>

        <TextView
            android:gravity="center"
            android:text="@string/room"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/room" />
    </LinearLayout>

</LinearLayout>